# thermal-solver

./: .gitignore  pyproject.toml  readme.md  requirements-dev.txt  run_example.py
.github/workflows/: python-app.yml
drafts/: examples.py
examples/: test_example_two_nodes.py
scripts/: autopep8.sh  check_flake8.sh  create_to_do_list.sh
src/thermal_solver/: components.py  constants.py  export.py  lib.py  node.py  plot.py  properties.py  radiosity.py  results.py  thermal_interfaces.py  thermal_system.py  utils.py  vectors.py
test/: test_components.py  test_lib.py  test_node.py  test_properties.py  test_radiosity.py  test_thermal_interfaces.py  test_utils.py  test_vectors.py  utils.py
thermal_solver/: constants.py  thermal_interfaces.py  vectors.py
