[project]
name = "thermal-solver"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "scipy>=1.16.2",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "flake8>=7.3.0",
    "ipython>=9.6.0",
    "matplotlib>=3.10.7",
    "pyqt6>=6.9.1",
    "pytest>=8.4.2",
]
