[project]
name = "thermal-solver"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scipy>=1.16.2",
    'vpython>=7.6.5',
]

[dependency-groups] # [project.optional-dependencies]
dev = [
    "autopep8>=2.3.2",
    "flake8>=7.3.0",
    "ipython>=9.6.0",
    "matplotlib>=3.10.7",
    "pyqt6>=6.9.1",
    "pytest>=8.4.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
